src/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>Account_State_WMP__c</fullName>
        <formula>TEXT( Account.Mailing_Billing_State_WMP__c)</formula>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Support_Team_WMP__c</fullName>
        <inlineHelpText>For Inform, the following support groups support the following products:

Inform NC = RMS, FBR, IQ, Analytics, Jail, Legacy VisionAIR

Inform IA = CAD, Mobile

Inform 911 = Only 911 products</inlineHelpText>
        <label>Account Support Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ETI</fullName>
                </value>
                <value>
                    <fullName>ETI 911</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
                <value>
                    <fullName>Inform 911</fullName>
                </value>
                <value>
                    <fullName>Inform IA</fullName>
                </value>
                <value>
                    <fullName>Inform NC</fullName>
                </value>
                <value>
                    <fullName>LETG</fullName>
                </value>
                <value>
                    <fullName>Omega</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Amount__c</fullName>
        <label>Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Cancellation_Comments__c</fullName>
        <label>Contract Cancellation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Cancellation_Date__c</fullName>
        <label>Contract Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status_WMP__c</fullName>
        <description>Pending Renewal = Inactive Status
Renewal Due = Active Status
No HW Support, Software Only = Active Status</description>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <color>#009900</color>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Emergency Support Only</fullName>
                    <color>#009900</color>
                    <label>Emergency Support Only</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <color>#FF0000</color>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Installed Not Live</fullName>
                    <color>#009900</color>
                    <label>Installed Not Live</label>
                </value>
                <value>
                    <fullName>Sold but Not Installed</fullName>
                    <color>#FF0000</color>
                    <label>Sold but Not Installed</label>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                    <color>#FF0000</color>
                    <label>Suspended</label>
                </value>
                <value>
                    <fullName>Vendor/Partner</fullName>
                    <color>#009900</color>
                    <label>Vendor/Partner</label>
                </value>
                <value>
                    <fullName>Inactive - Contract Expired</fullName>
                    <color>#FF0000</color>
                    <label>Inactive - Contract Expired</label>
                </value>
                <value>
                    <fullName>Inactive - Client Discontinued Support</fullName>
                    <color>#FF0000</color>
                    <label>Inactive - Client Discontinued Support</label>
                </value>
                <value>
                    <fullName>Pending Renewal</fullName>
                    <color>#FF0000</color>
                    <label>Pending Renewal</label>
                </value>
                <value>
                    <fullName>Renewal Due</fullName>
                    <color>#009900</color>
                    <label>Renewal Due</label>
                </value>
                <value>
                    <fullName>No HW Support, Software Only</fullName>
                    <color>#009900</color>
                    <label>No HW Support, Software Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Contract type designates a billing category for the service contract for Pro Forma invoicing</description>
        <inlineHelpText>Designates type of product covered by this contract</inlineHelpText>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                    <color>#F3D904</color>
                    <label>911</label>
                </value>
                <value>
                    <fullName>Advanced Reporting Module</fullName>
                </value>
                <value>
                    <fullName>Advanced Reporting Module Hosted</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                    <color>#E27001</color>
                    <label>APS</label>
                </value>
                <value>
                    <fullName>AVeL</fullName>
                    <color>#0B6FCE</color>
                    <label>AVeL</label>
                </value>
                <value>
                    <fullName>CAD 2000</fullName>
                    <color>#33FFFF</color>
                    <label>CAD 2000</label>
                </value>
                <value>
                    <fullName>CDP IMC</fullName>
                </value>
                <value>
                    <fullName>CDP Inform</fullName>
                </value>
                <value>
                    <fullName>CDP Zuercher</fullName>
                </value>
                <value>
                    <fullName>Copperfire</fullName>
                    <color>#33FFFF</color>
                    <label>Copperfire</label>
                </value>
                <value>
                    <fullName>CrimeMapping Hosted</fullName>
                </value>
                <value>
                    <fullName>CrimeView Dashboard</fullName>
                </value>
                <value>
                    <fullName>CrimeView Dashboard Hosted</fullName>
                </value>
                <value>
                    <fullName>CrimeView Desktop</fullName>
                </value>
                <value>
                    <fullName>DN CAD/Mobile</fullName>
                    <color>#33FFFF</color>
                    <label>DN CAD/Mobile</label>
                </value>
                <value>
                    <fullName>Emergin</fullName>
                    <color>#E27001</color>
                    <label>Emergin</label>
                </value>
                <value>
                    <fullName>ETI</fullName>
                </value>
                <value>
                    <fullName>ETI 911</fullName>
                </value>
                <value>
                    <fullName>ETI 911 ANI Link</fullName>
                </value>
                <value>
                    <fullName>ETI 911 Hardware</fullName>
                </value>
                <value>
                    <fullName>ETI Hardware</fullName>
                </value>
                <value>
                    <fullName>FACTS</fullName>
                    <color>#33FFFF</color>
                    <label>FACTS</label>
                </value>
                <value>
                    <fullName>FDC</fullName>
                    <color>#0B6FCE</color>
                    <label>FDC</label>
                </value>
                <value>
                    <fullName>Field Ops</fullName>
                </value>
                <value>
                    <fullName>FireView Dashboard</fullName>
                </value>
                <value>
                    <fullName>FireView Dashboard Hosted</fullName>
                </value>
                <value>
                    <fullName>FireView Desktop</fullName>
                </value>
                <value>
                    <fullName>GEO Comm</fullName>
                    <color>#E27001</color>
                    <label>GEO Comm</label>
                </value>
                <value>
                    <fullName>GIS Maintenance</fullName>
                </value>
                <value>
                    <fullName>Go To Assist</fullName>
                    <color>#E27001</color>
                    <label>Go To Assist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Ticket__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Test_VF_Page?contractID=&apos;+Id, &apos;Create CS Ticket&apos;, &apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create CS Ticket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Work_Order__c</fullName>
        <formula>HYPERLINK(&apos;/apex/ServiceContractExtensionWO?contractID=&apos;+Id, &apos;Create Work Order&apos;, &apos;_parent&apos;)</formula>
        <label>Create Work Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number_WMP__c</fullName>
        <formula>Account.EMS_Customer_Number_WMP__c</formula>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Derived_Prd_Family_from_Contract_Type__c</fullName>
        <description>This field is used to map the product family to the contract type and allows for filtering in the Knowledge base.  This field should never be on the contract page layout.</description>
        <formula>IF( ISPICKVAL( Contract_Type__c , &quot;Billing&quot;) , &quot;EMS&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;EMS CAD&quot;) , &quot;EMS&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;FDC&quot;), &quot;EMS&quot;, 
 IF( ISPICKVAL( Contract_Type__c , &quot;Fusion ePCR&quot;), &quot;EMS&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;Fusion Online&quot;), &quot;EMS&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;IMC&quot;), &quot;IMC&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;SBS&quot;), &quot;EMS&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;Sweet-Online&quot;), &quot;EMS&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;VisiNet&quot;), &quot;VisiNet&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;AVeL&quot;), &quot;EMS&quot;,
 IF( ISPICKVAL( Contract_Type__c , &quot;VisionAIR&quot;), &quot;VisionAIR&quot;,
&quot;Unknown&quot;
)))))))))))</formula>
        <label>Derived Prd Family from Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DummyTouchField__c</fullName>
        <label>DummyTouchField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Software_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Hardware/Software record on the Account page</inlineHelpText>
        <label>Hardware/Software Tracking</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hardware_Software__c.Account_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hardware_Software__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hosted_or_On_Premise__c</fullName>
        <label>Hosted or On-Premise?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hosted</fullName>
                </value>
                <value>
                    <fullName>On-Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Contract_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Contract ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Billing_Address__c</fullName>
        <formula>Account.Mailing_Billing_Street_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing/Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Billing_City__c</fullName>
        <formula>Account.Mailing_Billing_City_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing/Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Billing_Country__c</fullName>
        <formula>Text(Account.Mailing_Billing_Country_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing/Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Billing_State__c</fullName>
        <formula>Text(Account.Mailing_Billing_State_WMP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing/Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Billing_Zip__c</fullName>
        <formula>Account.Mailing_Billing_Zip_Postal_Code_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing/Billing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Contract_Indicator__c</fullName>
        <description>Formula equation is updated. Below is the old equation: 
IF(  EndDate &lt;  TODAY() , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Out of Contract&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;In Contract&quot;))</description>
        <formula>IF( 
    OR( ISPICKVAL( Contract_Status_WMP__c , &quot;Active&quot;),  
        ISPICKVAL( Contract_Status_WMP__c , &quot;Renewal Due&quot;), 
        ISPICKVAL( Contract_Status_WMP__c , &quot;No HW Support, Software Only&quot;), 
        ISPICKVAL( Contract_Status_WMP__c , &quot;Installed Not Live&quot;)
    ), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;In Contract&quot;)
    , IF(
        OR(
            ISPICKVAL( Contract_Status_WMP__c , &quot;Pending Renewal&quot;),  
            ISPICKVAL( Contract_Status_WMP__c , &quot;Inactive - Client Discontinued Support&quot;), 
            ISPICKVAL( Contract_Status_WMP__c , &quot;Sold but not Installed&quot;), 
            ISPICKVAL( Contract_Status_WMP__c , &quot;Suspended&quot;), 
            ISPICKVAL( Contract_Status_WMP__c , &quot;Inactive&quot;), 
            ISPICKVAL( Contract_Status_WMP__c , &quot;Inactive - Contract Expired&quot;)
        ), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Out of Contract&quot;)  
        , IF( 
            OR(
                ISPICKVAL( Contract_Status_WMP__c , &quot;Emergency Support Only&quot;),  
                ISPICKVAL( Contract_Status_WMP__c , &quot;Vendor/Partner&quot;)
            ), IF(  EndDate &lt;  TODAY() , 
                IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Out of Contract&quot;),
                IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;In Contract&quot;)), &quot;&quot;
         )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Contract Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_WMP__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>ETI</fullName>
                </value>
                <value>
                    <fullName>ETI 911</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>IQ</fullName>
                </value>
                <value>
                    <fullName>LETG</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>VisiNet</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Group1__c</fullName>
        <description>Populated via trigger &quot;SetPGValue&quot;:  https://na6.salesforce.com/01q800000001ChN</description>
        <label>Product Group1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Product group determined via contract type.  Field utilized on Service Contract &gt; Ticket &gt; Potential Defect</description>
        <formula>Product_Group1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Product group is determined by the associated service contract type.</inlineHelpText>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_WMP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <value>0018000000Quv78</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <formula>Account.Sales_Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax Rate %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Long_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Support_WMP__c</fullName>
        <label>Type of Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
                <value>
                    <fullName>24/7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Z_Contracted_GIS_Maintenance_Hours__c</fullName>
        <label>Contracted GIS Maintenance Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Z_Remaining_GIS_Maintenance_Hours__c</fullName>
        <label>Remaining GIS Maintenance Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuercher_Suite_Version__c</fullName>
        <label>Zuercher Suite Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7.10</fullName>
                </value>
                <value>
                    <fullName>7.9 SP1</fullName>
                </value>
                <value>
                    <fullName>7.0</fullName>
                </value>
                <value>
                    <fullName>6.7</fullName>
                </value>
                <value>
                    <fullName>6.6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>6.4 SP5</fullName>
                </value>
                <value>
                    <fullName>6.4.SP4</fullName>
                </value>
                <value>
                    <fullName>6.4.SP3</fullName>
                </value>
                <value>
                    <fullName>6.4.SP2</fullName>
                </value>
                <value>
                    <fullName>6.4.SP1</fullName>
                </value>
                <value>
                    <fullName>6.4</fullName>
                </value>
                <value>
                    <fullName>6.3</fullName>
                </value>
                <value>
                    <fullName>6.2</fullName>
                </value>
                <value>
                    <fullName>6.1</fullName>
                </value>
                <value>
                    <fullName>6.0</fullName>
                </value>
                <value>
                    <fullName>5.15</fullName>
                </value>
                <value>
                    <fullName>5.14</fullName>
                </value>
                <value>
                    <fullName>5.13</fullName>
                </value>
                <value>
                    <fullName>5.12</fullName>
                </value>
                <value>
                    <fullName>5.11</fullName>
                </value>
                <value>
                    <fullName>5.10 SP1</fullName>
                </value>
                <value>
                    <fullName>5.10</fullName>
                </value>
                <value>
                    <fullName>5.9 SP1</fullName>
                </value>
                <value>
                    <fullName>5.9</fullName>
                </value>
                <value>
                    <fullName>5.8 SP5</fullName>
                </value>
                <value>
                    <fullName>5.8 SP4</fullName>
                </value>
                <value>
                    <fullName>5.8 SP3</fullName>
                </value>
                <value>
                    <fullName>5.8 SP2</fullName>
                </value>
                <value>
                    <fullName>5.8 SP1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Contract_Status_WMP__c</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>Product_Family_WMP__c</columns>
        <columns>Product_Group__c</columns>
        <columns>DummyTouchField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Service_Contracts_EMS</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Type_of_Support_WMP__c</columns>
        <columns>Support_Owner__c</columns>
        <columns>Customer_Number_WMP__c</columns>
        <columns>Product_Family_WMP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Support_Team_WMP__c</field>
            <operation>contains</operation>
            <value>EMS</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Service Contracts - EMS</label>
    </listViews>
    <listViews>
        <fullName>All_Service_Contracts_IMC</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Type_of_Support_WMP__c</columns>
        <columns>Support_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Support_Team_WMP__c</field>
            <operation>contains</operation>
            <value>IMC</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Service Contracts - IMC</label>
    </listViews>
    <listViews>
        <fullName>All_Service_Contracts_Inform</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>Type_of_Support_WMP__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Product_Family_WMP__c</columns>
        <columns>Account_Support_Team_WMP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Support_Team_WMP__c</field>
            <operation>contains</operation>
            <value>Inform</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <label>All Service Contracts - Inform</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Service_Contracts_Tiburon</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>Contract_Status_WMP__c</columns>
        <columns>Type_of_Support_WMP__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Product_Family_WMP__c</columns>
        <columns>Account_Support_Team_WMP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family_WMP__c</field>
            <operation>equals</operation>
            <value>Tiburon</value>
        </filters>
        <filters>
            <field>Contract_Status_WMP__c</field>
            <operation>notEqual</operation>
            <value>Inactive,Inactive - Contract Expired,Inactive - Client Discontinued Support</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>CONTRACT.ENDDATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Service Contracts - Tiburon</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMS_Service_Contracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.STATUSINDICATOR</columns>
        <columns>Customer_Number_WMP__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>1,2</value>
        </filters>
        <filters>
            <field>Product_Family_WMP__c</field>
            <operation>equals</operation>
            <value>EMS</value>
        </filters>
        <label>EMS Service Contracts</label>
    </listViews>
    <listViews>
        <fullName>GIS_Contracts</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Mailing_Billing_State__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STATUSINDICATOR</columns>
        <columns>OWNER.NAME</columns>
        <columns>Z_Contracted_GIS_Maintenance_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTRACT.NAME</field>
            <operation>equals</operation>
            <value>*GIS</value>
        </filters>
        <label>Zuercher - GIS Service Contracts</label>
        <sharedTo>
            <group>Zuercher_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IMC_Service_Contracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.STATUSINDICATOR</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Family_WMP__c</field>
            <operation>equals</operation>
            <value>IMC</value>
        </filters>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>0,2</value>
        </filters>
        <label>IMC Service Contracts - Inactive</label>
        <sharedTo>
            <group>PerformSupportTeam</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>